force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/fields/Janati_RR__Canadian_Provinces__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Canadian_Provinces__c</fullName>
    <label>Canadian Provinces</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>British Columbia (BC)</fullName>
            </value>
            <value>
                <fullName>Manitoba (MB)</fullName>
            </value>
            <value>
                <fullName>New Brunswick (NB)</fullName>
            </value>
            <value>
                <fullName>Newfoundland and Labrador (NL)</fullName>
            </value>
            <value>
                <fullName>Nova Scotia (NS)</fullName>
            </value>
            <value>
                <fullName>Northwest Territories (NT)</fullName>
            </value>
            <value>
                <fullName>Nunavut (NU)</fullName>
            </value>
            <value>
                <fullName>Ontario (ON)</fullName>
            </value>
            <value>
                <fullName>Prince Edward Island (PE)</fullName>
            </value>
            <value>
                <fullName>Quebec (QC)</fullName>
            </value>
            <value>
                <fullName>Saskatchewan (SK)</fullName>
            </value>
            <value>
                <fullName>Yukon Territories (YT)</fullName>
            </value>
            <value>
                <fullName>Alberta (AB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>