force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/fields/Janati_RR__Country__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Country__c</fullName>
    <description>Country name followed by acronym in parenthesis.</description>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan (AF)</fullName>
            </value>
            <value>
                <fullName>Aland Islands (AX)</fullName>
            </value>
            <value>
                <fullName>Albania (AL)</fullName>
            </value>
            <value>
                <fullName>Algeria (DZ)</fullName>
            </value>
            <value>
                <fullName>Andorra (AD)</fullName>
            </value>
            <value>
                <fullName>Angola (AO)</fullName>
            </value>
            <value>
                <fullName>Anguilla (AI)</fullName>
            </value>
            <value>
                <fullName>Antarctica (AQ)</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda (AG)</fullName>
            </value>
            <value>
                <fullName>Argentina (AR)</fullName>
            </value>
            <value>
                <fullName>Armenia (AM)</fullName>
            </value>
            <value>
                <fullName>Aruba (AW)</fullName>
            </value>
            <value>
                <fullName>Australia (AU)</fullName>
            </value>
            <value>
                <fullName>Austria (AT)</fullName>
            </value>
            <value>
                <fullName>Azerbaijan (AZ)</fullName>
            </value>
            <value>
                <fullName>Bahamas (BS)</fullName>
            </value>
            <value>
                <fullName>Bahrain (BH)</fullName>
            </value>
            <value>
                <fullName>Bangladesh (BD)</fullName>
            </value>
            <value>
                <fullName>Barbados (BB)</fullName>
            </value>
            <value>
                <fullName>Belarus (BY)</fullName>
            </value>
            <value>
                <fullName>Belgium (BE)</fullName>
            </value>
            <value>
                <fullName>Belize (BZ)</fullName>
            </value>
            <value>
                <fullName>Benin (BJ)</fullName>
            </value>
            <value>
                <fullName>Bermuda (BM)</fullName>
            </value>
            <value>
                <fullName>Bhutan (BT)</fullName>
            </value>
            <value>
                <fullName>Bolivia, Plurinational State of (BO)</fullName>
            </value>
            <value>
                <fullName>Bonaire, Sint Eustatius and Saba (BQ)</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina (BA)</fullName>
            </value>
            <value>
                <fullName>Botswana (BW)</fullName>
            </value>
            <value>
                <fullName>Bouvet Island (BV)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>