force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/fields/Janati_RR__Object__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>