force-app/main/default/objects/Janati_RR__Round_Robin_Assignment__c/fields/Janati_RR__Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZIPCODE</fullName>
            </value>
            <value>
                <fullName>##blank##</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>